--- a/sea-orm-migration/Cargo.toml
+++ b/sea-orm-migration/Cargo.toml
@@ -23,9 +23,10 @@ clap = { version = "^3.2", features = ["env", "derive"] }
 dotenv = { version = "^0.15" }
 sea-orm = { version = "^0.8.0", path = "../", default-features = false, features = ["macros"] }
 sea-orm-cli = { version = "^0.8.1", path = "../sea-orm-cli", default-features = false }
-sea-schema = { version = "^0.8.1" }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+sea-schema = { git = "https://github.com/lemarier/sea-schema", branch = "lemarier-sea-query" }
 
 [dev-dependencies]
 async-std = { version = "^1", features = ["attributes", "tokio1"] }
